<resources>
    <string name="app_name">Daya.Gani-Farm</string>
    <string name="title_activity_maps">MyFarm</string>
    <string name="get_location">Start</string>
    <string name="stop_location">Stop</string>
    <string name="save_location">Save</string>
    <string name="location_name">Location Name</string>
    <string name="save">Save</string>
    <string name="title_activity_view_form_maps">Map</string>
    <string name="acres_n_s">Acres \n%s</string>
    <string name="cents_n_s">Cents \n%s</string>
    <string name="hectares_n_s">Hectares \n%s</string>
    <string name="sq_ft_n_s">Sq.Ft \n%s</string>
    <string name="view_all">View All</string>
    <string name="delete_last_point">Delete Last Point</string>
    <string name="sync_to_firebase">Sync To Firebase</string>
    <string name="create_farm">Create Farm</string>
    <string name="view_farm">View Farm</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
