<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:layout_above="@+id/llBottom"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="#ffff"
            android:weightSum="3"
            android:id="@+id/llBottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:id="@+id/llButtons"
                android:weightSum="4">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGetLocation"
                    android:text="@string/get_location"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStopLocation"
                    android:text="@string/stop_location"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSaveLocation"
                    android:text="@string/save_location"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnView"
                    android:text="View"/>
            </LinearLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:visibility="gone"
               android:layout_margin="10dp"
               android:id="@+id/rlSave">
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:id="@+id/etName"
                   android:layout_toStartOf="@+id/llSave"
                   android:hint="@string/location_name"/>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentEnd="true"
                   android:id="@+id/llSave"
                   android:orientation="horizontal">
                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/btnSave"
                       android:text="@string/save"/>
                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/btnCancel"
                       android:text="Cancel"/>
               </LinearLayout>

           </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>

